erDiagram
    clients ||--o{ contracts : "заключает"
    contracts ||--o{ tickets : "по договору"
    categories ||--o{ tickets : "категория"
    statuses ||--o{ tickets : "статус"
    employees ||--o{ tickets : "ответственный"
    tickets ||--o{ work_logs : "содержит"
    employees ||--o{ work_logs : "выполняет"

    clients {
        INTEGER id PK
        TEXT name UK
        TEXT tax_id
        TEXT contact_person
        TEXT phone
        TEXT email
        TEXT address
        TEXT created_at
        TEXT updated_at
    }

    employees {
        INTEGER id PK
        TEXT full_name UK
        TEXT position
        TEXT phone
        TEXT email UK
        TEXT created_at
        TEXT updated_at
    }

    contracts {
        INTEGER id PK
        INTEGER client_id FK
        TEXT number UK
        TEXT start_date
        TEXT end_date
        TEXT support_type
        TEXT tariff
        TEXT created_at
        TEXT updated_at
    }

    categories {
        INTEGER id PK
        TEXT code UK
        TEXT name UK
        INTEGER sort_order UK
    }

    statuses {
        INTEGER id PK
        TEXT code UK
        TEXT name UK
        INTEGER sort_order UK
    }

    tickets {
        INTEGER id PK
        INTEGER contract_id FK
        INTEGER category_id FK
        INTEGER status_id FK
        INTEGER responsible_employee_id FK
        TEXT subject
        TEXT description
        TEXT priority
        TEXT created_at
        TEXT deadline
        TEXT updated_at
    }

    work_logs {
        INTEGER id PK
        INTEGER ticket_id FK
        INTEGER employee_id FK
        TEXT work_date
        TEXT description
        REAL hours
        TEXT created_at
    }
